chore: add embed builder util
chore: send error message in embed

chore: refactor `util` import to `utils`

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -8,7 +8,7 @@
 		"paths": {
 			"#root/*": ["*"],
 			"#lib/*": ["lib/*"],
-			"#utils/*": ["lib/util/*"]
+			"#utils/*": ["lib/utils/*"]
 		}
 	},
 	"include": ["."]
