--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   "imports": {
     "#root/*": "./dist/*.js",
     "#lib/*": "./dist/lib/*.js",
-    "#utils/*": "./dist/lib/util/*.js"
+    "#utils/*": "./dist/lib/utils/*.js"
   },
   "packageManager": "yarn@3.2.0"
 }
