--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
 		"extends": "@sapphire"
 	},
 	"dependencies": {
-		"@discordjs/collection": "^0.5.0",
 		"@sapphire/decorators": "^4.3.3",
 		"@sapphire/discord-utilities": "^2.10.2",
 		"@sapphire/discord.js-utilities": "^4.9.3",
@@ -36,18 +35,19 @@
 		"discord-api-types": "^0.30.0",
 		"discord.js": "^13.6.0",
 		"dotenv-cra": "^3.0.2",
-		"eslint": "^8.12.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-prettier": "^4.0.0",
 		"reflect-metadata": "^0.1.13"
 	},
 	"devDependencies": {
 		"@sapphire/eslint-config": "^4.3.2",
 		"@sapphire/prettier-config": "^1.4.1",
 		"@sapphire/ts-config": "^3.3.3",
+		"@swc/core": "^1.2.162",
 		"@types/eslint": "^8",
 		"@types/node": "^17.0.0",
 		"@types/ws": "^8.5.3",
+		"eslint": "^8.12.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.0.0",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.6.1",
 		"tsup": "^5.12.2",
