feat: add sync command

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,6 +4,7 @@
 		"lib": ["ESNext"],
 		"target": "ESNext",
 		"module": "ESNext",
+		"noImplicitReturns": false,
 		"tsBuildInfoFile": "dist/.tsbuildinfo"
 	}
 }
