--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
 	"license": "MPL-2.0",
 	"author": "r-priyam <roy_priyam@outlook.com>",
 	"type": "module",
-	"main": "dist/index.js",
+	"main": "dist/Spectre.js",
 	"scripts": {
 		"build": "tsup",
-		"dev": "tsup --watch --onSuccess \"node --enable-source-maps dist/index.js\"",
+		"dev": "tsup --watch --onSuccess \"node --enable-source-maps dist/Spectre.js\"",
 		"format": "prettier --write \"src/**/*.ts\"",
 		"lint": "eslint src --ext ts --fix",
-		"start": "NODE_ENV=production node --enable-source-maps dist/index.js",
+		"start": "NODE_ENV=production node --enable-source-maps dist/Spectre.js",
 		"typecheck": "tsc -b src",
 		"watch": "tsup --watch"
 	},
@@ -25,8 +25,6 @@
 		"@sapphire/discord.js-utilities": "^4.9.4",
 		"@sapphire/fetch": "^2.3.1",
 		"@sapphire/framework": "next",
-		"@sapphire/plugin-api": "^3.2.1",
-		"@sapphire/plugin-editable-commands": "^1.2.0",
 		"@sapphire/plugin-logger": "^2.2.1",
 		"@sapphire/plugin-subcommands": "^2.2.0",
 		"@sapphire/time-utilities": "^1.7.4",
@@ -56,7 +54,8 @@
 	"imports": {
 		"#root/*": "./dist/*.js",
 		"#lib/*": "./dist/lib/*.js",
-		"#utils/*": "./dist/lib/utils/*.js"
+		"#utils/*": "./dist/lib/utils/*.js",
+		"#structures/*": "./dist/structures/*.js"
 	},
 	"packageManager": "yarn@3.2.0"
 }
