--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
 		"@sapphire/time-utilities": "^1.7.4",
 		"@sapphire/type": "^2.2.0",
 		"@sapphire/utilities": "^3.6.2",
-		"discord-api-types": "^0.26.1",
 		"discord.js": "^13.6.0",
 		"dotenv-cra": "^3.0.2",
 		"reflect-metadata": "^0.1.13"
@@ -41,14 +40,15 @@
 		"@sapphire/ts-config": "^3.3.4",
 		"@swc/core": "^1.2.162",
 		"@types/eslint": "^8",
-		"@types/node": "^17.0.0",
+		"@types/node": "^17.0.23",
 		"@types/ws": "^8.5.3",
+		"discord-api-types": "0.26.1",
 		"eslint": "^8.12.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^2.6.1",
-		"tsup": "^5.12.2",
+		"prettier": "^2.6.2",
+		"tsup": "^5.12.3",
 		"typescript": "^4.6.3"
 	},
 	"imports": {
