--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
 		"watch": "tsup --watch"
 	},
 	"prettier": "@sapphire/prettier-config",
-	"eslintConfig": {
-		"extends": "@sapphire"
-	},
 	"dependencies": {
 		"@sapphire/decorators": "^4.3.4",
 		"@sapphire/discord-utilities": "^2.10.3",
@@ -44,7 +41,9 @@
 		"discord-api-types": "^0.30.0",
 		"eslint": "^8.12.0",
 		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.25.4",
 		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.6.2",
 		"tsup": "^5.12.3",
