--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
 		"@swc/core": "^1.2.164",
 		"@types/node": "^17.0.23",
 		"@types/ws": "^8.5.3",
+		"@typescript-eslint/eslint-plugin": "^5.18.0",
+		"@typescript-eslint/parser": "^5.18.0",
 		"discord-api-types": "^0.31.0",
 		"eslint": "^8.12.0",
 		"eslint-config-prettier": "^8.5.0",
