--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,5 @@ dist/
 package-lock.json
 
 # Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+config.yaml
+config.production.yaml
