chore: `push-release` script

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
 		"dev": "tsup --watch --onSuccess \"node --enable-source-maps dist/ExpectoPatronum.js\"",
 		"format": "prettier --write \"src/**/*.ts\"",
 		"lint": "eslint src --ext ts --fix",
+		"push-release": "git push --follow-tags origin main",
 		"release": "standard-version",
-		"release:major": "standard-version --release-as major",
-		"release:minor": "standard-version --release-as minor",
-		"release:patch": "standard-version --release-as patch",
+		"release:major": "standard-version --release-as major && yarn push-release",
+		"release:minor": "standard-version --release-as minor && yarn push-release",
+		"release:patch": "standard-version --release-as patch && yarn push-release",
 		"start": "node --enable-source-maps dist/ExpectoPatronum.js",
 		"typecheck": "tsc -b src",
 		"watch": "tsup --watch"
