--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
 		"dev:watch": "tsc-watch -b src --onSuccess \"yarn start\"",
 		"format": "prettier --write \"src/**/*.ts\"",
 		"lint": "eslint src --ext ts --fix",
-		"push-release": "git push --follow-tags origin main",
-		"release": "standard-version",
-		"release:major": "standard-version --release-as major && yarn push-release",
-		"release:minor": "standard-version --release-as minor && yarn push-release",
-		"release:patch": "standard-version --release-as patch && yarn push-release",
+		"changelog": "node scripts/changelog.mjs",
+		"release": "bumpp --execute \"yarn changelog\" --commit 'chore(release): v'",
 		"start": "node --enable-source-maps dist/ExpectoPatronum.js",
 		"watch": "tsc -b src -w"
 	},
@@ -48,6 +45,7 @@
 		"@types/ws": "^8.5.3",
 		"@typescript-eslint/eslint-plugin": "^5.19.0",
 		"@typescript-eslint/parser": "^5.19.0",
+		"bumpp": "^7.1.1",
 		"discord-api-types": "^0.31.1",
 		"eslint": "^8.13.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -58,7 +56,6 @@
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.6.2",
 		"rimraf": "^3.0.2",
-		"standard-version": "^9.3.2",
 		"tsc-watch": "^5.0.3",
 		"typescript": "^4.6.3"
 	},
