--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"format": "prettier --write \"src/**/*.ts\"",
 		"lint": "eslint src --ext ts --fix",
 		"changelog": "node scripts/changelog.mjs",
-		"release": "bumpp --execute \"yarn changelog\" --commit 'chore(release): v'",
+		"release": "bumpp --execute \"yarn changelog\" --commit 'chore(release): v' -a -p",
 		"start": "node --enable-source-maps dist/ExpectoPatronum.js",
 		"watch": "tsc -b src -w"
 	},
