--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"type": "module",
 	"main": "dist/ExpectoPatronum.js",
 	"scripts": {
-		"build": "rimraf dist tsc -b src",
+		"build": "rimraf dist && tsc -b src",
 		"dev": "rimraf dist && yarn build && yarn start",
 		"dev:watch": "tsc-watch -b src --onSuccess \"yarn start\"",
 		"format": "prettier --write \"src/**/*.ts\"",
@@ -22,7 +22,6 @@
 		"@sapphire/decorators": "^4.3.4",
 		"@sapphire/discord-utilities": "^2.10.3",
 		"@sapphire/discord.js-utilities": "^4.9.4",
-		"@sapphire/fetch": "^2.3.1",
 		"@sapphire/framework": "next",
 		"@sapphire/plugin-logger": "^2.2.1",
 		"@sapphire/plugin-subcommands": "^2.2.0",
@@ -41,7 +40,6 @@
 		"@sapphire/prettier-config": "^1.4.2",
 		"@sapphire/ts-config": "^3.3.4",
 		"@types/node": "^17.0.23",
-		"@types/rimraf": "^3",
 		"@types/ws": "^8.5.3",
 		"@typescript-eslint/eslint-plugin": "^5.19.0",
 		"@typescript-eslint/parser": "^5.19.0",
@@ -53,7 +51,6 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"eslint-plugin-unicorn": "^42.0.0",
-		"npm-run-all": "^4.1.5",
 		"prettier": "^2.6.2",
 		"rimraf": "^3.0.2",
 		"tsc-watch": "^5.0.3",
