--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,10 +1,15 @@
 {
+	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
 	"extends": ["github>sapphiredev/readme:sapphire-renovate", ":disableDependencyDashboard"],
 	"schedule": ["at any time"],
 	"rangeStrategy": "bump",
+	"lockFileMaintenance": {
+		"enabled": true,
+		"automerge": true
+	},
 	"packageRules": [
 		{
-			"matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+			"matchUpdateTypes": ["minor", "patch", "pin"],
 			"automerge": true,
 			"automergeStrategy": "squash"
 		}
