--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
 		"@sapphire/type": "^2.2.0",
 		"@sapphire/utilities": "^3.6.2",
 		"discord.js": "^13.6.0",
+		"figlet": "^1.5.2",
+		"gradient-string": "^2.0.0",
 		"postgres": "^3.0.5",
 		"reflect-metadata": "^0.1.13",
 		"yaml": "^2.0.1"
@@ -64,6 +66,8 @@
 		"@sapphire/plugin-hmr": "^1.2.0",
 		"@sapphire/prettier-config": "^1.4.2",
 		"@sapphire/ts-config": "^3.3.4",
+		"@types/figlet": "^1.5.4",
+		"@types/gradient-string": "^1.1.2",
 		"@types/node": "^17.0.23",
 		"@types/ws": "^8.5.3",
 		"@typescript-eslint/eslint-plugin": "^5.19.0",
