--- a/package.json
+++ b/package.json
@@ -5,11 +5,6 @@
 	"license": "MPL-2.0",
 	"author": "r-priyam <roy_priyam@outlook.com>",
 	"type": "module",
-	"imports": {
-		"#root/*": "./dist/*.js",
-		"#lib/*": "./dist/lib/*.js",
-		"#utils/*": "./dist/lib/utils/*.js"
-	},
 	"main": "dist/ExpectoPatronum.js",
 	"scripts": {
 		"build": "rimraf dist && tsc -b src",
@@ -20,7 +15,8 @@
 		"format": "prettier --write \"src/**/*.ts\"",
 		"lint": "eslint src --ext ts --fix",
 		"prepare": "husky install",
-		"release": "standard-version -a",
+		"release": "cliff-jumper",
+		"release:test": "cliff-jumper --dry-run",
 		"start": "node --enable-source-maps dist/ExpectoPatronum.js",
 		"watch": "tsc -b src -w"
 	},
@@ -61,6 +57,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^16.2.3",
 		"@commitlint/config-conventional": "^16.2.1",
+		"@favware/cliff-jumper": "^1.1.3",
 		"@mikro-orm/sql-highlighter": "^1.0.1",
 		"@sapphire/eslint-config": "^4.3.4",
 		"@sapphire/plugin-hmr": "^1.2.0",
@@ -90,6 +87,11 @@
 		"standard-version": "^9.3.2",
 		"tsc-watch": "^5.0.3",
 		"typescript": "^4.6.3"
+	},
+	"imports": {
+		"#root/*": "./dist/*.js",
+		"#lib/*": "./dist/lib/*.js",
+		"#utils/*": "./dist/lib/utils/*.js"
 	},
 	"packageManager": "yarn@3.2.0",
 	"standard-version": {
