--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "expecto-patronum",
-	"version": "0.1.1",
+	"version": "0.2.0",
 	"private": true,
 	"license": "MPL-2.0",
 	"author": "r-priyam <roy_priyam@outlook.com>",
@@ -8,7 +8,6 @@
 	"main": "dist/ExpectoPatronum.js",
 	"scripts": {
 		"build": "rimraf dist && tsc -b src",
-		"changelog": "node scripts/changelog.mjs",
 		"commit": "git-cz",
 		"dev": "rimraf dist && yarn build && yarn start",
 		"dev:watch": "tsc-watch -b src --onSuccess \"yarn start\"",
@@ -84,7 +83,6 @@
 		"prettier": "^2.6.2",
 		"pretty-quick": "^3.1.3",
 		"rimraf": "^3.0.2",
-		"standard-version": "^9.3.2",
 		"tsc-watch": "^5.0.3",
 		"typescript": "^4.6.3"
 	},
@@ -93,13 +91,5 @@
 		"#lib/*": "./dist/lib/*.js",
 		"#utils/*": "./dist/lib/utils/*.js"
 	},
-	"packageManager": "yarn@3.2.0",
-	"standard-version": {
-		"scripts": {
-			"precommit": "yarn changelog && git add CHANGELOG.md"
-		},
-		"skip": {
-			"changelog": true
-		}
-	}
+	"packageManager": "yarn@3.2.0"
 }
