--- a/cliff.toml
+++ b/cliff.toml
@@ -6,20 +6,28 @@ All notable changes to this project will be documented in this file.\n
 """
 body = """
 {% if version %}\
-    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
+    # [{{ version | trim_start_matches(pat="v") }}]\
+    {% if previous %}\
+        {% if previous.version %}\
+            (https://github.com/r-priyam/expecto-patronum/compare/{{ previous.version }}...{{ version }})\
+        {% else %}
+            (https://github.com/r-priyam/expecto-patronum/tree/{{ version }})\
+        {% endif %}\
+    {% endif %} \
+    - ({{ timestamp | date(format="%Y-%m-%d") }})
 {% else %}\
-    ## [unreleased]
-{% endif %}\
-{% if previous %}\
-    {% if previous.commit_id %}
-        [{{ previous.commit_id | truncate(length=7, end="") }}]({{ previous.commit_id }})...\
-            [{{ commit_id | truncate(length=7, end="") }}]({{ commit_id }})
-    {% endif %}\
+    # [unreleased]
 {% endif %}\
 {% for group, commits in commits | group_by(attribute="group") %}
-    ### {{ group | upper_first }}
+    ## {{ group | upper_first }}
     {% for commit in commits %}
-        - {{ commit.message | upper_first }} ([{{ commit.id | truncate(length=7, end="") }}]({{ commit.id }}))\
+        - {% if commit.breaking %}\
+            [**breaking**] \
+          {% endif %}\
+            {% if commit.scope %}\
+                **{{commit.scope}}:** \
+            {% endif %}\
+            {{ commit.message | upper_first }} ([{{ commit.id | truncate(length=7, end="") }}](https://github.com/r-priyam/expecto-patronum/commit/{{ commit.id }}))\
     {% endfor %}
 {% endfor %}\n
 """
