--- a/package.json
+++ b/package.json
@@ -45,10 +45,13 @@
 		"@sapphire/framework": "next",
 		"@sapphire/plugin-hmr": "^1.2.0",
 		"@sapphire/plugin-logger": "^2.2.1",
+		"@sapphire/plugin-scheduled-tasks": "^2.3.2",
 		"@sapphire/plugin-subcommands": "^2.2.0",
+		"@sapphire/stopwatch": "^1.4.1",
 		"@sapphire/time-utilities": "^1.7.4",
 		"@sapphire/type": "^2.2.0",
 		"@sapphire/utilities": "^3.6.2",
+		"bull": "^4.8.1",
 		"discord.js": "^13.6.0",
 		"dotenv": "^16.0.0",
 		"figlet": "^1.5.2",
@@ -63,6 +66,7 @@
 		"@sapphire/eslint-config": "^4.3.4",
 		"@sapphire/prettier-config": "^1.4.3",
 		"@sapphire/ts-config": "^3.3.4",
+		"@types/bull": "^3.15.8",
 		"@types/figlet": "^1.5.4",
 		"@types/gradient-string": "^1.1.2",
 		"@types/node": "^17.0.23",
