--- a/.cliff-jumperrc
+++ b/.cliff-jumperrc
@@ -1,6 +1,7 @@
 {
 	"$schema": "https://raw.githubusercontent.com/favware/cliff-jumper/main/assets/cliff-jumper.schema.json",
 	"name": "expecto-patronum",
+	"commitMessageTemplate": "chore({release): release {{new-version}}",
 	"packagePath": ".",
 	"verbose": true
 }
