--- a/.docker/docker-compose.dev.yml
+++ b/.docker/docker-compose.dev.yml
@@ -19,6 +19,8 @@ services:
       POSTGRES_USER: 'expectopatronum'
       POSTGRES_PASSWORD: 'expectopatronum'
       POSTGRES_DB: 'expectopatronum'
+    ports:
+    - '127.0.0.1:5432:5432'
     expose:
       - '5432'
     volumes:
@@ -31,6 +33,8 @@ services:
     <<: *restart_policy
     image: 'redis:6.2.6-alpine'
     container_name: redis
+    ports:
+    - '127.0.0.1:6379:6379'
     expose:
       - '6379'
     networks:
