--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -3,27 +3,27 @@ version: '3.9'
 x-restart-policy: &restart_policy
   restart: unless-stopped
 
+x-logging: &logging
+  logging:
+    options:
+      max-file: '5'
+      max-size: '10m'
+
 services:
   postgres:
+    <<: *logging
     <<: *restart_policy
     build: ./postgresql
     container_name: postgres
-    environment:
-      POSTGRES_USER: 'expectopatronum'
-      POSTGRES_PASSWORD: 'expectopatronum'
-      POSTGRES_DB: 'expectopatronum'
     ports:
       - '127.0.0.1:5432:5432'
     volumes:
       - expecto_patronum:/var/lib/postgresql/data
     networks:
       - expecto_patronum
-    logging:
-      options:
-        max-size: '5m'
-        max-file: '3'
 
   redis:
+    <<: *logging
     <<: *restart_policy
     image: 'redis:6.2.6-alpine'
     container_name: redis
@@ -32,12 +32,9 @@ services:
       - '127.0.0.1:6379:6379'
     networks:
       - expecto_patronum
-    logging:
-      options:
-        max-size: '5m'
-        max-file: '1'
 
   bot:
+    <<: *logging
     <<: *restart_policy
     image: ghcr.io/r-priyam/expecto-patronum:latest
     container_name: expecto_patronum
@@ -49,10 +46,6 @@ services:
       - postgres
       - redis
     tty: true
-    logging:
-      options:
-        max-size: '10m'
-        max-file: '5'
 
 volumes:
   expecto_patronum:
