--- a/.docker/docker-compose.dev.yml
+++ b/.docker/docker-compose.dev.yml
@@ -15,6 +15,10 @@ services:
     <<: *restart_policy
     container_name: postgres
     build: ./postgresql
+    environment:
+      - POSTGRES_USER=expectopatronum
+      - POSTGRES_PASSWORD=expectopatronum
+      - POSTGRES_DB=expectopatronum
     ports:
     - '5432:5432'
     volumes:
