--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -15,6 +15,10 @@ services:
     <<: *restart_policy
     build: ./postgresql
     container_name: postgres
+    environment:
+      - POSTGRES_USER=expectopatronum
+      - POSTGRES_PASSWORD=expectopatronum
+      - POSTGRES_DB=expectopatronum
     ports:
       - '127.0.0.1:5432:5432'
     volumes:
