chore: update cliff config

--- a/cliff.toml
+++ b/cliff.toml
@@ -6,7 +6,7 @@ All notable changes to this project will be documented in this file.\n
 """
 body = """
 {% if version %}\
-    # [{{ version | trim_start_matches(pat="v") }}]\
+    ## [{{ version | trim_start_matches(pat="v") }}]\
     {% if previous %}\
         {% if previous.version %}\
             (https://github.com/r-priyam/expecto-patronum/compare/{{ previous.version }}...{{ version }})\
@@ -16,10 +16,10 @@ body = """
     {% endif %} \
     - ({{ timestamp | date(format="%Y-%m-%d") }})
 {% else %}\
-    # [unreleased]
+    ## [unreleased]
 {% endif %}\
 {% for group, commits in commits | group_by(attribute="group") %}
-    ## {{ group | upper_first }}
+    ### {{ group | upper_first }}
     {% for commit in commits %}
         - {% if commit.breaking %}\
             [**breaking**] \
