--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"minimist": "^1.2.6"
 	},
 	"dependencies": {
+		"@discordjs/builders": "^0.13.0",
 		"@mikro-orm/sql-highlighter": "^1.0.1",
 		"@sapphire/decorators": "^4.3.4",
 		"@sapphire/discord-utilities": "^2.10.3",
@@ -52,6 +53,7 @@
 		"@sapphire/type": "^2.2.0",
 		"@sapphire/utilities": "^3.6.2",
 		"bull": "^4.8.2",
+		"colorette": "^2.0.16",
 		"discord.js": "^13.6.0",
 		"dotenv": "^16.0.0",
 		"figlet": "^1.5.2",
