--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"main": "dist/ExpectoPatronum.js",
 	"scripts": {
 		"build": "rimraf dist && tsc -b src",
+		"commands:sync": "node scripts/syncer.mjs",
 		"commit": "git-cz",
 		"dev": "rimraf dist && yarn build && yarn start",
 		"dev:watch": "tsc-watch -b src --onSuccess \"yarn start\"",
@@ -64,6 +65,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^16.2.3",
 		"@commitlint/config-conventional": "^16.2.1",
+		"@discordjs/rest": "^0.4.1",
 		"@favware/cliff-jumper": "^1.3.1",
 		"@sapphire/eslint-config": "^4.3.4",
 		"@sapphire/prettier-config": "^1.4.3",
@@ -72,9 +74,11 @@
 		"@types/figlet": "^1.5.4",
 		"@types/gradient-string": "^1.1.2",
 		"@types/node": "^17.0.25",
+		"@types/prompts": "^2",
 		"@types/ws": "^8.5.3",
 		"@typescript-eslint/eslint-plugin": "^5.21.0",
 		"@typescript-eslint/parser": "^5.21.0",
+		"commander": "^9.2.0",
 		"commitizen": "^4.2.4",
 		"cz-conventional-changelog": "3.3.0",
 		"discord-api-types": "^0.32.0",
@@ -86,8 +90,10 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.4.1",
+		"ora": "^6.1.0",
 		"prettier": "^2.6.2",
 		"pretty-quick": "^3.1.3",
+		"prompts": "^2.4.2",
 		"rimraf": "^3.0.2",
 		"tsc-watch": "^5.0.3",
 		"typescript": "^4.6.3"
