--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"main": "dist/ExpectoPatronum.js",
 	"scripts": {
 		"build": "rimraf dist && tsc -b src",
+		"commands:sync": "discord-commands-sync",
 		"commit": "git-cz",
 		"dev": "rimraf dist && yarn build && yarn start",
 		"dev:watch": "tsc-watch -b src --onSuccess \"yarn start\"",
@@ -78,6 +79,7 @@
 		"commitizen": "^4.2.4",
 		"cz-conventional-changelog": "3.3.0",
 		"discord-api-types": "^0.32.0",
+		"discord-commands-sync": "^1.2.0",
 		"eslint": "^8.14.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-config-xo": "^0.40.0",
