--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     <<: *restart_policy
     image: 'redis:7.0.0-alpine'
     container_name: redis
-    command: 'redis-server --requirepass redis --loglevel warning'
+    command: 'redis-server --loglevel warning'
     ports:
       - '127.0.0.1:6379:6379'
     networks:
