--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"commit": "git-cz",
 		"dev": "rimraf dist && yarn build && yarn start",
 		"dev:watch": "tsc-watch -b src --onSuccess \"yarn start\"",
-		"format": "prettier --write \"src/**/*.ts\"",
+		"format": "prettier --write --loglevel=warn \"src/**/*.ts\"",
 		"lint": "eslint src --ext ts --fix",
 		"prepare": "husky install",
 		"release": "cliff-jumper",
@@ -82,10 +82,9 @@
 		"discord-commands-sync": "^1.2.2",
 		"eslint": "^8.14.0",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-config-xo": "^0.40.0",
-		"eslint-config-xo-typescript": "^0.50.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-unicorn": "^42.0.0",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.4.1",
 		"prettier": "^2.6.2",
