--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "../tsconfig.base.json",
 	"compilerOptions": {
+		"allowJs": true,
 		"outDir": "../dist",
 		"rootDir": ".",
 		"baseUrl": ".",
@@ -12,5 +13,6 @@
 			"#classes/*": ["lib/classes/*"]
 		}
 	},
-	"include": ["."]
+	"include": [".", "./**/*.json"],
+	"exclude": ["./tsconfig.json"]
 }
