chore: stop generating `d.ts` and `d.ts.map` files

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,6 +4,8 @@
 		"lib": ["ESNext"],
 		"target": "ESNext",
 		"module": "ESNext",
+		"declaration": false,
+		"declarationMap": false,
 		"noImplicitReturns": false,
 		"tsBuildInfoFile": "dist/.tsbuildinfo"
 	}
