--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
 		"@sapphire/time-utilities": "^1.7.4",
 		"@sapphire/type": "^2.2.4",
 		"@sapphire/utilities": "^3.6.2",
+		"@skyra/i18next-backend": "^1.0.0",
 		"bull": "^4.8.2",
 		"colorette": "^2.0.16",
 		"discord.js": "^13.6.0",
 		"dotenv": "^16.0.0",
 		"figlet": "^1.5.2",
 		"gradient-string": "^2.0.1",
+		"i18next": "^21.7.1",
 		"postgres": "^3.1.0",
 		"reflect-metadata": "^0.1.13"
 	},
