--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,12 +16,11 @@
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": true
 	},
-	"i18n-ally.localesPaths": ["src/languages"],
+	"i18n-ally.localesPaths": ["src/locales"],
 	"i18n-ally.sourceLanguage": "en-US",
-	"i18n-ally.keystyle": "flat",
+	"i18n-ally.keystyle": "nested",
 	"i18n-ally.displayLanguage": "en-US",
 	"i18n-ally.pathMatcher": "{locale}/{namespaces}.json",
 	"i18n-ally.namespace": true,
-	"i18n-ally.preferredDelimiter": ":",
-	"i18n-ally.defaultNamespace": "commands"
+	"i18n-ally.preferredDelimiter": ":"
 }
