chore: I love sapphire

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@sapphire/discord.js-utilities": "4.10.0",
 		"@sapphire/framework": "next",
 		"@sapphire/plugin-hmr": "^1.2.0",
+		"@sapphire/plugin-i18next": "^2.5.0",
 		"@sapphire/plugin-logger": "^2.2.1",
 		"@sapphire/plugin-scheduled-tasks": "2.3.3",
 		"@sapphire/plugin-subcommands": "^2.2.0",
@@ -53,14 +54,12 @@
 		"@sapphire/time-utilities": "^1.7.4",
 		"@sapphire/type": "^2.2.4",
 		"@sapphire/utilities": "^3.6.2",
-		"@skyra/i18next-backend": "^1.0.0",
 		"bull": "^4.8.2",
 		"colorette": "^2.0.16",
 		"discord.js": "^13.6.0",
 		"dotenv": "^16.0.0",
 		"figlet": "^1.5.2",
 		"gradient-string": "^2.0.1",
-		"i18next": "^21.7.1",
 		"postgres": "^3.1.0",
 		"reflect-metadata": "^0.1.13"
 	},
