--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,9 +17,8 @@
 		"source.fixAll.eslint": true
 	},
 	"i18n-ally.sourceLanguage": "en-US",
-	"i18n-ally.keystyle": "flat",
 	"i18n-ally.displayLanguage": "en-US",
 	"i18n-ally.namespace": true,
 	"i18n-ally.preferredDelimiter": ":",
-	"i18n-ally.enabledFrameworks": ["sapphire-i18next"]
+	"i18n-ally.enabledFrameworks": ["sapphire-i18next", "custom"]
 }
