--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,9 @@
 	"i18n-ally.displayLanguage": "en-US",
 	"i18n-ally.namespace": true,
 	"i18n-ally.preferredDelimiter": ":",
-	"i18n-ally.enabledFrameworks": ["sapphire-i18next", "custom"]
+	"i18n-ally.enabledFrameworks": [
+		"sapphire-i18next",
+		"custom"
+	],
+	"i18n-ally.keystyle": "nested"
 }
