--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@sapphire/discord.js-utilities": "4.10.0",
 		"@sapphire/framework": "next",
 		"@sapphire/plugin-hmr": "^1.2.0",
+		"@sapphire/plugin-i18next": "^2.5.0",
 		"@sapphire/plugin-logger": "^2.2.1",
 		"@sapphire/plugin-scheduled-tasks": "2.3.3",
 		"@sapphire/plugin-subcommands": "^2.2.0",
