chore: update cliff config

--- a/cliff.toml
+++ b/cliff.toml
@@ -21,13 +21,16 @@ body = """
 {% for group, commits in commits | group_by(attribute="group") %}
     ### {{ group | upper_first }}
     {% for commit in commits %}
-        - {% if commit.breaking %}\
-            [**breaking**] \
-          {% endif %}\
-            {% if commit.scope %}\
-                **{{commit.scope}}:** \
-            {% endif %}\
+		- {% if commit.scope %}\
+			**{{commit.scope}}:** \
+		  {% endif %}\
             {{ commit.message | upper_first }} ([{{ commit.id | truncate(length=7, end="") }}](https://github.com/r-priyam/expecto-patronum/commit/{{ commit.id }}))\
+		{% if commit.breaking %}}\
+			\n\n {% raw %}  {% endraw %} ### 💥 Breaking Changes:\n \
+			{% for breakingChange in commit.footers %}\
+				{% raw %}  {% endraw %} - {{ breakingChange }}\n\
+			{% endfor %}\
+		{% endif %}\
     {% endfor %}
 {% endfor %}\n
 """
@@ -37,18 +40,22 @@ footer = ""
 [git]
 conventional_commits = true
 filter_unconventional = true
-commit_parsers = [
-    { message = "^feat", group = "Features 🎉"},
-    { message = "^fix", group = "Bug Fixes 🐛"},
-    { message = "^perf", group = "Performance 🚀"},
-    { message = "^refactor", group = "Refactor 🖌️"},
-	{ body = ".*security", group = "Security 🛡️"},
-    { message = "^style", group = "Styling 💅"},
-	{ message = ".*deprecated", body = ".*deprecated", group = "Deprecation 🏮"},
-	{ message = "^revert", skip = true},
+	commit_parsers = [
+    { message = "^feat", group = "🚀 Features"},
+    { message = "^fix", group = "🐛 Bug Fixes"},
+    { message = "^docs", group = "📝 Documentation"},
+    { message = "^perf", group = "🏃 Performance"},
+    { message = "^refactor", group = "🏠 Refactor"},
+    { message = "^typings", group = "⌨️ Typings"},
+    { message = "^types", group = "⌨️ Typings"},
+    { message = ".*deprecated", body = ".*deprecated", group = "🚨 Deprecation"},
+    { message = "^revert", skip = true},
+    { message = "^style", group = "🪞 Styling"},
+    { message = "^test", group = "🧪 Testing"},
     { message = "^chore", skip = true},
     { message = "^ci", skip = true},
     { message = "^build", skip = true},
+    { body = ".*security", group = "🛡️ Security"},
 ]
 filter_commits = true
 tag_pattern = "v[0-9]*"
