chore: fix my mess [skip ci]

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -5,5 +5,5 @@ commit_message: 'chore(i18n-crowdin): new translations for %original_file_name% 
 append_commit_message: false
 
 files:
-  - source: /src/locales/en-US/**/*.json
-    translation: /src/locales/%locale%/**/%original_file_name%
+  - source: /src/languages/en-US/**/*.json
+    translation: /src/languages/%locale%/**/%original_file_name%
