--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,7 +1,7 @@
 project_id: '509420'
 api_token_env: 'CROWDIN_PERSONAL_TOKEN'
-pull_request_title: 'feat(crowdin): update localization files'
-commit_message: 'chore(i18n-crowdin): new translations for %original_file_name% (%language%)'
+pull_request_title: 'feat(crowdin): update localization files [skip ci]'
+commit_message: 'chore(i18n-crowdin): new translations for %original_file_name% (%language%) [skip ci]'
 append_commit_message: false
 
 files:
