chore: job name

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  PublishDragonite:
+  Publish:
     name: Publish expecto patronum docker image
     runs-on: ubuntu-latest
     steps:
